--- a/style.css
+++ b/style.css
@@ -1,9 +1,70 @@
 body {
     font-family: 'Roboto';
-    margin 0;
+    margin 0 10%;
+    padding: 0;
     font size: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    
+    }
+
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 10%;
+    }
+
+.nav-items {
+    display: inline-flex;
+    padding: 10px 100px;
+    font-weight: bold;
+    font-size: 25px;
 }
+
+.nav-item {
+    padding: 10px;
+    list-style-type: none;
+}
+
+
+h1 {
+    font-size: 40px;
+}
+
+.heart {
+    color: red;
+}
+
+h2 {
+    margin: 0;
+    
+}
+
+.portrait {
+    width: 500px;
+
+}
+
+#projects {
+    margin: 50px;
+}
+
+.project {
+    padding: 15px;
+}
+
+.project-image {
+    width: 50%;
+}
+
+.project-title h3 {
+    display: inline;
+    padding: 20px;
+    
+}
+
 
 
 
