--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 body {
     font-family: 'Roboto';
-    margin 0 10%;
+    margin 0;
     padding: 0;
     font size: 20px;
     text-align: center;
     display: flex;
     flex-direction: column;
-    
     }
 
 
@@ -64,6 +63,34 @@ h2 {
     padding: 20px;
     
 }
+
+details{
+    cursor: pointer;
+}
+
+footer {
+    margin-top: 10px;
+    padding: 10px;
+    text-align: center;
+    color: grey;
+}
+
+a {
+    color: steelblue;
+    text-decoration: none;
+    font-size: 25px;
+}
+
+#skills-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+@media only screen and
+ 
+
 
 
 
